--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Matheus React Form</title>
   </head>
-  <body class="bg-[#e96150]">
+  <body class="bg-[#4D3277]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
